# Flashcard-Generator-from-PDF

./: README.md  pdf_to_anki_flashcard.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
src/: app.py
src/services/: anki_connect.py  apkg_export.py  pdf_parser.py
src/utils/: config.py
