[project]
name = "anki-flashcards"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "genanki>=0.13.1",
    "pdfplumber>=0.11.9",
    "requests>=2.32.5",
    "services>=0.1.1",
    "streamlit>=1.54.0",
    "utils>=1.0.2",
]
